Geometry node group "float" inputs are not modifiable through python #86876

Closed
opened 2021-03-24 08:43:10 +01:00 by Jesse Yurkovich · 9 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-23 18:34, hash: 3ea1779365
Worked: never

Short description of error
When you connect node properties to the Group Input sockets, the Float* properties are not exposed correctly. The properties show up under the modifier and are useable from the UI, however, none of them are usable from python.

Types that seem to work: NodeSocketInt, NodeSocketVector
Types that don't seem to work: NodeSocketFloatDistance at least

Exact steps for others to reproduce the error
geonode-python.blend

  • Load attached file

    • Just an empty object using a Geometry node modifier which has a Cylinder mesh primitive with some of the properties connected to Group Input sockets (by hand; no python yet)
  • In the script editor window that's already open, execute bpy.context.active_object.modifiers["GeometryNodes"]["Input_5"] = 16

    • This is the integer connected to the Vertices property
    • The value will change once you mouse-over the properties panel, but the 3d view won't be refreshed until you refresh the object (e.g. toggle edit mode)
      • This is a quirk that could be addressed later, the real bug is below
  • Now try executing bpy.context.active_object.modifiers["GeometryNodes"]["Input_7"] = 4.5

    • This is the element connected to the Radius property
    • If you mouse-over the properties panel the input disappears(!) and the value does not take effect <-- The bug
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-23 18:34, hash: `3ea1779365` Worked: never **Short description of error** When you connect node properties to the Group Input sockets, the Float* properties are not exposed correctly. The properties show up under the modifier and are useable from the UI, however, none of them are usable from python. Types that seem to work: `NodeSocketInt, NodeSocketVector` Types that don't seem to work: `NodeSocketFloatDistance` at least **Exact steps for others to reproduce the error** [geonode-python.blend](https://archive.blender.org/developer/F9906687/geonode-python.blend) - Load attached file - Just an empty object using a Geometry node modifier which has a Cylinder mesh primitive with some of the properties connected to Group Input sockets (by hand; no python yet) - In the script editor window that's already open, execute `bpy.context.active_object.modifiers["GeometryNodes"]["Input_5"] = 16` - This is the integer connected to the Vertices property - The value will change once you mouse-over the properties panel, but the 3d view won't be refreshed until you refresh the object (e.g. toggle edit mode) - This is a quirk that could be addressed later, the real bug is below - Now try executing `bpy.context.active_object.modifiers["GeometryNodes"]["Input_7"] = 4.5` - This is the element connected to the Radius property - If you mouse-over the properties panel the input disappears(!) and the value does not take effect <-- The bug
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Fascinating. I can confirm this issue.

Fascinating. I can confirm this issue.
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly
Member

I took a quick look but I think this is related to D9697: Refactor IDProperty UI data storage and #85306 (Use boolean in the modifier for exposed boolean node group inputs).

I took a quick look but I think this is related to [D9697: Refactor IDProperty UI data storage](https://archive.blender.org/developer/D9697) and #85306 (Use boolean in the modifier for exposed boolean node group inputs).
Hans Goudey changed title from Geometry node "float" inputs are not modifiable through python to Geometry node group "float" inputs are not modifiable through python 2021-03-24 14:13:38 +01:00

This issue was referenced by 8034b276ba

This issue was referenced by 8034b276ba6c5369a356a1b8f5e858305f8b47b9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-03-29 10:56:18 +02:00

Added subscriber: @PhilippeCrassous

Added subscriber: @PhilippeCrassous
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86876
No description provided.